2014-09-21  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* bigfloat2.tcl: Solve ticket UUID 3309165, different implementation of isInt than suggested
	* bigfloat2.test: Added several tests for the new implementation of isInt
	* optimize.tcl: Solve ticket UUID 3193459, as suggested.
	* optimize.tcl: Solve a problem with the detection of the exceptions in solving linear programs. Version 1.0.1
	* optimize.test: Added tests to distinguish infeasible and unbounded linear programs
	* optimize.test: Added test for ticket UUID 3193459
	* pkgIndex.tcl: Bumping version of math::optimize package to 1.0.1, bigfloat2 to 2.0.2

2014-08-21  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* calculus.tcl: Bumping version to 0.8
	* pkgIndex.tcl: Bumping version of math::calculus package to 0.8

2014-08-21  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* calculus.man: Describe the qk15 procedure implementing Gauss-Kronrod 15 points quadrature rule
	* calculus.tcl: Implement the qk15 procedure for Gauss-Kronrod quadrature
	* calculus.test: Provide a simple test procedure for Gauss-Kronrod quadrature

2014-08-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistcs.man: Add missing documentation for random-poisson procedure

2014-01-30  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.tcl: Corrected edge case in pointInsidePolygon (by closer checking
	                intersection of line segments; ticket c1ca34ead3).
	                Also introduced a procedure calculateDistanceToPolygon to solve ticket bff902be35
	* math_geometry.man: Description of new procedure pointInsidePolygon
	* geometry.test: Added test cases based on both tickets
	* pkgIndex.tcl: Bumped version to 1.1.3

2014-01-19  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* stat_kernel.tcl: Corrected use of bandwidth
	* statistics.test: Added margin per kernel - not quite satisfactory in the case of the uniform kernel

2014-01-18  Arjen Markus <arjenmarkus@users.sourceforge.net>